[package]
name = "cyclone"
version = "0.1.0"
authors = ["Patricio Napoli <pnapoli@geminis.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
chrono = "0.4.11"
threadpool = "1.8.0"
yaml-rust = "0.4"
dashmap = "3.11.1"
